// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ticket blocks selectors Ticket selectors Select the group of tickets 1`] = `
Array [
  "modern-tribe",
]
`;

exports[`Ticket blocks selectors Ticket selectors Select the group of tickets 2`] = `
Array [
  "modern-tribe",
]
`;

exports[`Ticket blocks selectors Ticket selectors Select the group of tickets 3`] = `
Object {
  "modern-tribe": Object {
    "SKU": "",
    "capacity": "",
    "capacityType": "independent",
    "dateIsPristine": true,
    "description": "",
    "endDate": "September 1, 2018",
    "endTime": "22:30",
    "isEditing": false,
    "postId": null,
    "price": 0,
    "sold": 0,
    "startDate": "September 1, 2018",
    "startTime": "22:30",
    "title": "",
  },
}
`;

exports[`Ticket blocks selectors Ticket selectors Select type of tickets 1`] = `
Array [
  Object {
    "SKU": "",
    "capacity": "",
    "capacityType": "independent",
    "dateIsPristine": true,
    "description": "",
    "endDate": "September 1, 2018",
    "endTime": "22:30",
    "isEditing": false,
    "postId": null,
    "price": 0,
    "sold": 0,
    "startDate": "September 1, 2018",
    "startTime": "22:30",
    "title": "",
  },
]
`;

exports[`Ticket blocks selectors Ticket selectors Select type of tickets 2`] = `Array []`;

exports[`Ticket blocks selectors Ticket selectors Select type of tickets 3`] = `Array []`;

exports[`Ticket blocks selectors Ticket selectors Ticket dates and times 1`] = `"22:30"`;

exports[`Ticket blocks selectors Ticket selectors Ticket dates and times 2`] = `"22:30"`;

exports[`Ticket blocks selectors Ticket selectors Ticket dates and times 3`] = `"September 1, 2018"`;

exports[`Ticket blocks selectors Ticket selectors Ticket dates and times 4`] = `"September 1, 2018"`;

exports[`Ticket blocks selectors Ticket selectors Ticket fields 1`] = `""`;

exports[`Ticket blocks selectors Ticket selectors Ticket fields 2`] = `""`;

exports[`Ticket blocks selectors Ticket selectors Ticket fields 3`] = `""`;

exports[`Ticket blocks selectors Ticket selectors Ticket fields 4`] = `0`;

exports[`Ticket blocks selectors Ticket selectors Ticket fields 5`] = `"independent"`;

exports[`Ticket blocks selectors Ticket selectors Ticket fields 6`] = `false`;

exports[`Ticket blocks selectors Ticket selectors Ticket fields 7`] = `0`;
